// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ScrollArea > renders with as correctly 1`] = `
"<section data-slot="root" class="relative overflow-y-auto overflow-x-hidden">
  <div data-slot="viewport" class="relative p-3 columns-xs inline-flex flex-col gap-3"></div>
</section>"
`;

exports[`ScrollArea > renders with class correctly 1`] = `
"<div data-slot="root" class="relative overflow-y-auto overflow-x-hidden custom-class">
  <div data-slot="viewport" class="relative p-3 columns-xs inline-flex flex-col gap-3"></div>
</div>"
`;

exports[`ScrollArea > renders with default slot correctly 1`] = `
"<div data-slot="root" class="relative overflow-y-auto overflow-x-hidden">
  <div data-slot="viewport" class="relative p-3 columns-xs inline-flex flex-col gap-3">Default slot</div>
</div>"
`;

exports[`ScrollArea > renders with items correctly 1`] = `
"<div data-slot="root" class="relative overflow-y-auto overflow-x-hidden">
  <div data-slot="viewport" class="relative p-3 columns-xs inline-flex flex-col gap-3">
    <div data-slot="item" class=""></div>
    <div data-slot="item" class=""></div>
    <div data-slot="item" class=""></div>
  </div>
</div>"
`;

exports[`ScrollArea > renders with orientation horizontal correctly 1`] = `
"<div data-slot="root" class="relative overflow-x-auto overflow-y-hidden">
  <div data-slot="viewport" class="relative p-3 inline-flex flex-row gap-3"></div>
</div>"
`;

exports[`ScrollArea > renders with orientation vertical correctly 1`] = `
"<div data-slot="root" class="relative overflow-y-auto overflow-x-hidden">
  <div data-slot="viewport" class="relative p-3 columns-xs inline-flex flex-col gap-3"></div>
</div>"
`;

exports[`ScrollArea > renders with ui correctly 1`] = `
"<div data-slot="root" class="relative overflow-y-auto overflow-x-hidden custom-root">
  <div data-slot="viewport" class="relative p-3 columns-xs inline-flex flex-col gap-3"></div>
</div>"
`;

exports[`ScrollArea > renders with virtualize boolean correctly 1`] = `
"<div data-slot="root" class="relative overflow-y-auto overflow-x-hidden">
  <div data-slot="viewport" class="relative p-3 columns-xs inline-flex flex-col gap-3" style="position: relative; inline-size: 100%; block-size: 300px;"></div>
</div>"
`;

exports[`ScrollArea > renders with virtualize enabled false correctly 1`] = `
"<div data-slot="root" class="relative overflow-y-auto overflow-x-hidden">
  <div data-slot="viewport" class="relative p-3 columns-xs inline-flex flex-col gap-3">
    <div data-slot="item" class=""></div>
    <div data-slot="item" class=""></div>
    <div data-slot="item" class=""></div>
  </div>
</div>"
`;

exports[`ScrollArea > renders with virtualize gap correctly 1`] = `
"<div data-slot="root" class="relative overflow-y-auto overflow-x-hidden">
  <div data-slot="viewport" class="relative p-3 columns-xs inline-flex flex-col gap-3" style="position: relative; inline-size: 100%; block-size: 320px;"></div>
</div>"
`;

exports[`ScrollArea > renders with virtualize lanes correctly 1`] = `
"<div data-slot="root" class="relative overflow-y-auto overflow-x-hidden">
  <div data-slot="viewport" class="relative p-3 columns-xs inline-flex flex-col gap-3" style="position: relative; inline-size: 100%; block-size: 100px;"></div>
</div>"
`;

exports[`ScrollArea > renders with virtualize loadMoreThreshold correctly 1`] = `
"<div data-slot="root" class="relative overflow-y-auto overflow-x-hidden">
  <div data-slot="viewport" class="relative p-3 columns-xs inline-flex flex-col gap-3" style="position: relative; inline-size: 100%; block-size: 300px;"></div>
</div>"
`;

exports[`ScrollArea > renders with virtualize object correctly 1`] = `
"<div data-slot="root" class="relative overflow-y-auto overflow-x-hidden">
  <div data-slot="viewport" class="relative p-3 columns-xs inline-flex flex-col gap-3" style="position: relative; inline-size: 100%; block-size: 150px;"></div>
</div>"
`;

exports[`ScrollArea > renders with virtualize padding correctly 1`] = `
"<div data-slot="root" class="relative overflow-y-auto overflow-x-hidden">
  <div data-slot="viewport" class="relative p-3 columns-xs inline-flex flex-col gap-3" style="position: relative; inline-size: 100%; block-size: 340px;"></div>
</div>"
`;

exports[`ScrollArea > renders with virtualize scrollMargin correctly 1`] = `
"<div data-slot="root" class="relative overflow-y-auto overflow-x-hidden">
  <div data-slot="viewport" class="relative p-3 columns-xs inline-flex flex-col gap-3" style="position: relative; inline-size: 100%; block-size: 300px;"></div>
</div>"
`;
